--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,6 +1,6 @@
 body {
-   background-color: rgb(238, 226, 208);
-      }
+    background-color: rgb(238, 226, 208);
+       }
       
 nav {
 text-align: center;
@@ -63,20 +63,12 @@ section p {
     font-size: 20px;
     }
 
-    footer {
-        text-align: center;
-        background-image: linear-gradient(to bottom, rgb(172, 114, 39) , white);
-        font-size: 40px;
-       } 
-        footer h2 {
-            color: rgb(0, 0, 0);
-            background: rgb(172, 114, 39)  
-    }
-
 fieldset {
     text-align: center;
-    background-color:rgb(243, 188, 117);
-    border: 2px solid black;
+    background-color:rgb(0, 0, 0);
+    border: 5px solid rgb(172, 114, 39);
+    color: rgb(243, 188, 117);
+    padding: 10px;
 }
 
 legend {
@@ -88,11 +80,10 @@ section div {
     text-align: left;
 } 
 
-h2 {
+section h2 {
     font-family: 'Times New Roman', Times, serif;
     font-style: oblique;
     color: #000000;
-    
  }
 
 .box {
@@ -109,6 +100,16 @@ input:focus {
         font-size: 15px;
     
 }
+
+footer {
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(169, 113, 40, 0.748) , white);
+    font-size: 40px;
+}
+
+    footer h2 {
+        color: rgb(0, 0, 0);
+        } 
      
 
      
