--- a/css/fotos.css
+++ b/css/fotos.css
@@ -51,6 +51,14 @@ div {
     text-align: center;
 }
 
+section {
+   margin: 60px;
+}
+
+table {
+    margin: auto;
+}
+
  h1 {
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
     font-style: oblique;
@@ -60,27 +68,11 @@ div {
 }
 
 p {
-     color: #000000;
-     font-size: 20px;
+     color: #dfbe92;
+     font-size: 22px;
+     background-color: rgb(0, 0, 0);
+     padding: 10px;
     }
-
-h2 {
-    font-family: 'Times New Roman', Times, serif;
-    font-style: oblique;
-    color: #000000;
-    font-size: 30px;
-   }
-
-.border {
-    border-top: 2px solid #000000;
-}
-
-.box {
-    margin: 80px;
-    display: flex;
-    flex-direction: column;
-    align-content: space-around;
-}
 
 .animate__animated {
     animation-iteration-count: infinite;
@@ -90,12 +82,11 @@ h2 {
 
 footer {
     text-align: center;
-    background-image: linear-gradient(to bottom, rgb(172, 114, 39) , white);
+    background-image: linear-gradient(to bottom, rgba(169, 113, 40, 0.748) , white);
     font-size: 40px;
 }
 
     footer h2 {
         color: rgb(0, 0, 0);
-        background: rgb(172, 114, 39) 
-    }    
+        }  
 
