--- a/css/tecnicas.css
+++ b/css/tecnicas.css
@@ -53,11 +53,12 @@ section p {
     font-size: 20px;
 }
 
-h2 {
+section h2 {
     font-family: 'Times New Roman', Times, serif;
     font-style: oblique;
     color: #000000;
     font-size: 30px;
+    text-decoration: underline;
     }
 
 
@@ -71,11 +72,10 @@ h2 {
 
 footer {
     text-align: center;
-    background-image: linear-gradient(to bottom, rgb(172, 114, 39) , white);
+    background-image: linear-gradient(to bottom, rgba(169, 113, 40, 0.748) , white);
     font-size: 40px;
 }
 
     footer h2 {
         color: rgb(0, 0, 0);
-        background: rgb(172, 114, 39) 
-    }    
+        } 
