--- a/css/contacto.css
+++ b/css/contacto.css
@@ -2,6 +2,12 @@ body {
     background-color: rgb(238, 226, 208);
        }
       
+.contenedor {
+        width:100%;
+        margin: 0 auto;
+        overflow: hidden;
+    }
+
 nav {
 text-align: center;
     }
@@ -87,8 +93,14 @@ section h2 {
  }
 
 .box {
-     margin: 80px;
-    }
+    margin: 10%;
+}
+
+.box2 {
+ display: flex;
+ justify-content: center;
+ margin: 10px;
+}
 
 input {
         width: 100px; height: 30px;
