--- a/css/quienessomos.css
+++ b/css/quienessomos.css
@@ -2,6 +2,12 @@ body {
    background-color: rgb(238, 226, 208);
       }
 
+.contenedor {
+        width:100%;
+        margin: 0 auto;
+        overflow: hidden;
+    }
+
 nav {
 text-align: center;
     }    
@@ -61,6 +67,11 @@ h1 {
     color: #000000;
     } 
 
+.imagenes {
+    display: flex;
+    justify-content: center;
+    max-width: 100%;
+}
 
 .box {
     margin: 80px;
